feat: fix query and update repository
